--- a/.github/workflows/gophermart.yml
+++ b/.github/workflows/gophermart.yml
@@ -41,6 +41,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Redis
+        uses: redis-actions/setup-redis@v1
+        with:
+        redis-version: '6.x'
+
       - name: Download autotests binaries
         uses: robinraju/release-downloader@v1.8
         with:
@@ -73,3 +78,6 @@ jobs:
             -accrual-host=localhost \
             -accrual-port=$(random unused-port) \
             -accrual-database-uri="postgresql://postgres:postgres@postgres/praktikum?sslmode=disable"
+
+     
+
