--- a/.github/workflows/gophermart.yml
+++ b/.github/workflows/gophermart.yml
@@ -27,15 +27,11 @@ jobs:
           --health-retries 5
 
       redis:
-        image: redis
-        env:
-          REDIS_HOST: redis
-          REDIS_PORT: 6379
+        image: redis:6.2.8
+        ports:
+          - 6379:6379
         options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout code
@@ -46,9 +42,9 @@ jobs:
         with:
           repository: Yandex-Practicum/go-autotests
           latest: true
-          tag: "v0.9.16"
           fileName: "*"
           out-file-path: .tools
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup autotest binary
         run: |
@@ -62,6 +58,8 @@ jobs:
           (cd cmd/accrual && chmod +x accrual_linux_amd64)
 
       - name: Test
+        env:
+          REDIS_URI: redis:6379
         run: |
           gophermarttest \
             -test.v -test.run=^TestGophermart$ \
@@ -73,6 +71,3 @@ jobs:
             -accrual-host=localhost \
             -accrual-port=$(random unused-port) \
             -accrual-database-uri="postgresql://postgres:postgres@postgres/praktikum?sslmode=disable"
-
-     
-
